.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotlanche-pagamento-deployment
  labels:
    app: dotlanche
spec:
  selector:
    matchLabels: 
      app: dotlanche-pagamento
  template:
    metadata:
      labels:
        app: dotlanche-pagamento
    spec:
      containers:
        - name: c-dotlanche-pagamento
          image: #{APP_IMAGE}#
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080 
            initialDelaySeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080 
            initialDelaySeconds: 300
            periodSeconds: 300
            failureThreshold: 3
